exports[`Storyshots Item single item 1`] = `
<article
  className="Item">
  <div
    className="card">
    <div
      className="image">
      <img
        alt="Placeat voluptates repellendus veniam."
        src="placehold.png" />
    </div>
    <div
      className="info">
      <div
        className="name">
        Placeat voluptates repellendus veniam.
      </div>
      <div
        className="price">
        €
        233.34
      </div>
      <div
        className="description block-with-text">
        Deserunt ut quae architecto error assumenda exercitationem occaecati.
      </div>
    </div>
  </div>
</article>
`;

exports[`Storyshots Itemlist empty 1`] = `
<div
  className="ItemList">
  <div
    className="empty">
    Nessun items disponibile
  </div>
</div>
`;

exports[`Storyshots Itemlist with many items 1`] = `
<div
  className="ItemList">
  <section
    className="items">
    <article
      className="Item">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
          <div
            className="description block-with-text">
            Deserunt ut quae architecto error assumenda exercitationem occaecati.
          </div>
        </div>
      </div>
    </article>
    <article
      className="Item">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
          <div
            className="description block-with-text">
            Deserunt ut quae architecto error assumenda exercitationem occaecati.
          </div>
        </div>
      </div>
    </article>
    <article
      className="Item">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
          <div
            className="description block-with-text">
            Deserunt ut quae architecto error assumenda exercitationem occaecati.
          </div>
        </div>
      </div>
    </article>
    <article
      className="Item">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
          <div
            className="description block-with-text">
            Deserunt ut quae architecto error assumenda exercitationem occaecati.
          </div>
        </div>
      </div>
    </article>
    <article
      className="Item">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
          <div
            className="description block-with-text">
            Deserunt ut quae architecto error assumenda exercitationem occaecati.
          </div>
        </div>
      </div>
    </article>
    <article
      className="Item">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
          <div
            className="description block-with-text">
            Deserunt ut quae architecto error assumenda exercitationem occaecati.
          </div>
        </div>
      </div>
    </article>
    <article
      className="Item">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
          <div
            className="description block-with-text">
            Deserunt ut quae architecto error assumenda exercitationem occaecati.
          </div>
        </div>
      </div>
    </article>
    <article
      className="Item">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
          <div
            className="description block-with-text">
            Deserunt ut quae architecto error assumenda exercitationem occaecati.
          </div>
        </div>
      </div>
    </article>
    <article
      className="Item">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
          <div
            className="description block-with-text">
            Deserunt ut quae architecto error assumenda exercitationem occaecati.
          </div>
        </div>
      </div>
    </article>
  </section>
</div>
`;

exports[`Storyshots Itemlist with one item 1`] = `
<div
  className="ItemList">
  <section
    className="items">
    <article
      className="Item">
      <div
        className="card">
        <div
          className="image">
          <img
            alt="Placeat voluptates repellendus veniam."
            src="placehold.png" />
        </div>
        <div
          className="info">
          <div
            className="name">
            Placeat voluptates repellendus veniam.
          </div>
          <div
            className="price">
            €
            233.34
          </div>
          <div
            className="description block-with-text">
            Deserunt ut quae architecto error assumenda exercitationem occaecati.
          </div>
        </div>
      </div>
    </article>
  </section>
</div>
`;
